# voice-controllm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  Packager.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/icon/: AppIcon.icns
assets/macos/: Info.plist  vcmd-Info.plist
cli/: Cargo.toml
cli/src/: client.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: bundle.rs  client.rs  dirs.rs  lib.rs
daemon/: Cargo.toml
daemon/examples/: capture_test.rs  inject_test.rs  transcribe_test.rs  vad_test.rs
daemon/src/: audio.rs  audio_test.rs  config.rs  config_test.rs  controller.rs  controller_test.rs  daemon.rs  dirs.rs  engine.rs  engine_test.rs  inject.rs  inject_test.rs  lib.rs  main.rs  models.rs  models_test.rs  server.rs  server_test.rs  socket.rs  socket_test.rs  vad.rs  vad_test.rs
daemon/src/platform/: macos.rs  mod.rs
daemon/src/transcribe/: canary.rs  mod.rs  whisper.rs
daemon/tests/: e2e_grpc.rs  vad_integration.rs
docs/: configuration.md  future-improvements.md  release.md
docs/plans/: 2025-02-02-transcription-design.md  2025-02-02-transcription-plan.md  2025-02-03-ipc-design.md  2025-02-03-ipc-plan.md  2026-02-07-integration-design.md  2026-02-07-integration-plan.md  2026-02-11-menubar-design.md  2026-02-15-phase4-design.md  2026-02-15-phase4a-plan.md  2026-05-launch-design.md  icon-prompt.md  project-roadmap.md
docs/research/: speech-models.md
docs/superpowers/plans/: 2026-05-16-launch-v0.1.md
docs/superpowers/specs/: 2026-05-16-launch-v0.1-design.md
menubar/: Cargo.toml  THIRD-PARTY-NOTICES
menubar/src/: bridge.rs  client.rs  icons.rs  lib.rs  main.rs  paths.rs  state.rs  tray.rs
platform/: Cargo.toml
platform/src/: accessibility.rs  autostart.rs  frontmost.rs  lib.rs  logging.rs  microphone.rs
platform/src/macos/: accessibility.rs  autostart.rs  frontmost.rs  logging.rs  microphone.rs  mod.rs
platform/tests/: autostart.rs  frontmost.rs  logging.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  vcm.proto  voice_controllm.proto
scripts/: Info.plist.template  build-icns.sh  entitlements.plist  install-vcmctl-cli.sh  make-placeholder-icon.sh  notarize.sh  package.sh  sign.sh
