[package]
name = "vcm-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for VCM"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1.49", features = ["net"] }
tonic = "0.12"
tower = "0.5"
vcm-proto = { version = "0.1.0", path = "../proto" }
xdg = "3.0"
