[package]
name = "voice-controllm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "voice_controllm_daemon"
path = "src/lib.rs"

[[bin]]
name = "voice-controllm-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
audioadapter-buffers = "2.0.0"
cpal = "0.17.1"
dirs = "6.0.0"
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
reqwest = "0.13.1"
rubato = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "fs", "io-util"] }
toml = "0.8"
tracing = "0.1.44"
whisper-rs = { version = "0.15.1", features = ["coreml"] }

[dev-dependencies]
ctrlc = "3.5.1"
hound = "3.5.1"
tempfile = "3.20"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
