[package]
name = "vcm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daemon for VCM — audio capture, VAD, transcription"

[lib]
name = "vcm_daemon"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3"
audioadapter-buffers = "2.0.0"
cpal = "0.17.1"
enigo = "0.6.1"
futures-util = "0.3.31"
hyper = { version = "1.6", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
indicatif = "0.18.3"
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
reqwest = { version = "0.13.1", default-features = false, features = ["stream", "native-tls"] }
rubato = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "fs", "io-util", "rt-multi-thread", "macros", "signal", "process"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "0.8"
tonic = "0.12"
tower = "0.5"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vcm-common = { version = "0.1.0", path = "../common" }
vcm-proto = { version = "0.1.0", path = "../proto" }
whisper-rs = { version = "0.15.1", features = ["coreml", "tracing_backend"] }

[lints]
workspace = true

[dev-dependencies]
ctrlc = "3.5.1"
hound = "3.5.1"
tempfile = "3.20"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
