[package]
name = "voice-controllm-menubar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tao = "0.34"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "signal"] }
tonic = "0.12"
tower = "0.5"
tracing = "0.1"
tray-icon = "0.21"
voice-controllm-proto = { version = "0.1.0", path = "../proto" }
xdg = "3.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFRunLoop"] }
