[package]
name = "vcm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "System tray app for voice-controllm — menu bar control and status"

[[bin]]
name = "vcm"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
tao = "0.34"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tray-icon = "0.21"
voice-controllm-common = { version = "0.1.0", path = "../common" }
voice-controllm-proto = { version = "0.1.0", path = "../proto" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFRunLoop"] }
