[package]
name = "voice-controllm-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC protocol definitions for voice-controllm"

[lints]
workspace = true

[dependencies]
prost = "0.13"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
